# The-Neural-Grid-Project

./: CMakeLists.txt  Dockerfile  README.md  aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  build.bat  build.sh
